--- a/my-account-my-credit-cards.html
+++ b/my-account-my-credit-cards.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Account - My Address</title>
+    <title>My Account - My Credit Cards</title>
     <link rel="stylesheet" href="css/lib/bootstrap-grid.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/swiper.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 
 <body>
     <header class="header">
@@ -119,7 +120,7 @@
             <div class="container">
                 <ul>
                     <li><a href="#">My Account</a></li>
-                    <li>My Address</li>
+                    <li>My Credit Cards</li>
                 </ul>
             </div>
         </div>
@@ -148,7 +149,7 @@
                                                 Personal info
                                             </a>
                                         </li>
-                                        <li class="active">
+                                        <li>
                                             <a href="#">
                                                 <span class="icwrap">
                                                     <img src="img/account/acc-address.svg" alt="icon">
@@ -156,7 +157,7 @@
                                                 My Address
                                             </a>
                                         </li>
-                                        <li>
+                                        <li class="active">
                                             <a href="#">
                                                 <span class="icwrap">
                                                     <img src="img/account/acc-card.svg" alt="icon">
@@ -232,8 +233,8 @@
                                 <div class="acccontentsect__header twocol">
                                     <div class="leftsect">
                                         <p>
-                                            <img src="img/account/accsect-ic4.svg" alt="img">
-                                            Your address information
+                                            <img src="img/account/accsect-ic5.svg" alt="img">
+                                            My Credit Cards
                                         </p>
                                     </div>
                                     <div class="rightsect">
@@ -243,70 +244,54 @@
                                                 <button><img src="img/header/search-icon.svg" alt="search"></button>
                                             </div>
                                             <a href="#" class="greenbtn"><img src="img/account/plus.svg" alt="add"> Add
-                                                Address</a>
+                                                Credit Cards</a>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="acccontentsect__body myaddr">
-                                    <div class="row">
-                                        <div class="col-xl-6">
-                                            <div class="addressinfobox">
-                                                <div class="addressinfobox__info">
-                                                    <button class="setdefault active">Default</button>
-                                                    <p class="name">Struk Arsen Tarasovich</p>
-                                                    <p>via Bordina 6</p>
-                                                    <p>Bergamo, PG 06034</p>
-                                                    <p>English</p>
-                                                </div>
-                                                <div class="addressinfobox__btns">
-                                                    <a href="#" class="bordergreenbtn">Edit</a>
-                                                    <a href="#" class="bordergreenbtn">Remove</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-6">
-                                            <div class="addressinfobox">
-                                                <div class="addressinfobox__info">
-                                                    <button class="setdefault">Set as default</button>
-                                                    <p class="name">Struk Andriy Tarasovych</p>
-                                                    <p>via Montanta 9</p>
-                                                    <p>London, LN 08044</p>
-                                                    <p>English</p>
-                                                </div>
-                                                <div class="addressinfobox__btns">
-                                                    <a href="#" class="bordergreenbtn">Edit</a>
-                                                    <a href="#" class="bordergreenbtn">Remove</a>
+                                    <div class="creditcardswrapper">
+                                        <div class="row">
+                                            <div class="col-xl-6">
+                                                <div class="addressinfobox crcard">
+                                                    <div class="addressinfobox__info">
+                                                        <button class="setdefault active">Available</button>
+                                                        <p class="name"> <img src="img/account/cardicon.png" alt="img"> MC **** 3033</p>
+                                                        <p>Expiration 12/25</p>
+                                                        <p>Struk Arsen Tarasovich</p>
+                                                    </div>
+                                                    <div class="addressinfobox__btns">
+                                                        <a href="#" class="bordergreenbtn">Edit</a>
+                                                        <a href="#" class="bordergreenbtn">Remove</a>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="col-xl-6">
-                                            <div class="addressinfobox">
-                                                <div class="addressinfobox__info">
-                                                    <button class="setdefault">Set as default</button>
-                                                    <p class="name">Struk Bogdan Tarasovych</p>
-                                                    <p>via Montanta 9</p>
-                                                    <p>London, LN 08044</p>
-                                                    <p>English</p>
-                                                </div>
-                                                <div class="addressinfobox__btns">
-                                                    <a href="#" class="bordergreenbtn">Edit</a>
-                                                    <a href="#" class="bordergreenbtn">Remove</a>
+                                            <div class="col-xl-6">
+                                                <div class="addressinfobox crcard">
+                                                    <div class="addressinfobox__info">
+                                                        <button class="setdefault">Set as default</button>
+                                                        <p class="name"> <img src="img/account/cardicon.png" alt="img"> MC **** 4055</p>
+                                                        <p>Expiration 09/23</p>
+                                                        <p>Struk Arsen Tarasovich</p>
+                                                    </div>
+                                                    <div class="addressinfobox__btns">
+                                                        <a href="#" class="bordergreenbtn">Edit</a>
+                                                        <a href="#" class="bordergreenbtn">Remove</a>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="col-xl-6">
-                                            <div class="addressinfobox">
-                                                <div class="addressinfobox__info">
-                                                    <button class="setdefault">Set as default</button>
-                                                    <p class="name">Struk Sofi Tarasovych</p>
-                                                    <p>via Montanta 9</p>
-                                                    <p>London, LN 08044</p>
-                                                    <p>English</p>
-                                                </div>
-                                                <div class="addressinfobox__btns">
-                                                    <a href="#" class="bordergreenbtn">Edit</a>
-                                                    <a href="#" class="bordergreenbtn">Remove</a>
+                                            <div class="col-xl-6">
+                                                <div class="addressinfobox crcard">
+                                                    <div class="addressinfobox__info">
+                                                        <button class="setdefault">Set as default</button>
+                                                        <p class="name"> <img src="img/account/cardicon.png" alt="img"> MC **** 5684</p>
+                                                        <p>Expiration 09/25</p>
+                                                        <p>Struk Arsen Tarasovich</p>
+                                                    </div>
+                                                    <div class="addressinfobox__btns">
+                                                        <a href="#" class="bordergreenbtn">Edit</a>
+                                                        <a href="#" class="bordergreenbtn">Remove</a>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -323,7 +308,6 @@
         <img class="accbgel1" src="img/background-elements/bgelem7.png" alt="img">
         <img class="accbgel2" src="img/background-elements/bgelem6.png" alt="img">
     </main>
-    
 
     <footer class="footer">
         <div class="container">
