--- a/sitemap.html
+++ b/sitemap.html
@@ -42,6 +42,8 @@
             <li><a href="my-account.html" target="_blank">My Account</a></li>
             <li><a href="my-account-personal-info.html" target="_blank">My Account - Personal Info</a></li>
             <li><a href="my-account-my-address.html" target="_blank">My Account - My Address</a></li>
+            <li><a href="my-account-my-address-edit.html" target="_blank">My Account - My Address - Edit</a></li>
+            <li><a href="my-account-my-credit-cards.html" target="_blank">My Account - My Credit Cards</a></li>
             
         </ul>
     </div>
